# sprites4curses

./: .gitignore  .gitmodules  CHANGELOG.md  Makefile  Makefile.am  README.md  animate.c  animate.h  configure.ac  demo.c  demofile.txt  format.sh  installer-sh  palette-README.md  palette.gpl  png-resize.py  png_resize.py  requirements.in  requirements.txt  sheet-converter.py  sheet_converter.py  sprites.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 🐞-bug-report.md
.github/workflows/: gen-demofile.yml  make_doc.yml  makefile-raylib.yml  makefile.yml  run-demo.yml  test-proc-sub.yml  tex2pdf.yml
animate_src/: animate.c  animate.h
demo_src/: demo.c
documentation/: README.md  s4c.doxyfile
s4c-animate/: README.md  animate.c  animate.h
s4c-demo/: demo.c  demo_animate.c  demo_gui.c
scripts/: cut_sheet.py  depr.py  palette.py  png_resize.py  s4c  s4c-cli.py  s4c_cli.py  sheet_converter.py  sprites.py
scripts-legacy/: cut_sheet.py  palette.py  sheet_converter.py
src/: s4c.c  s4c.h
